@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 3,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
